<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/lin_main"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_F5F6FA"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center_horizontal"
                android:text="@string/fedml"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_set_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="24dp"
                android:background="@color/color_54A158"
                android:text="@string/set_private_path"
                android:textAllCaps="false"
                android:textColor="#212121"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/idle_status"
                android:textColor="@color/color_686C7D"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ai.fedml.widget.CompletedProgressView
                android:id="@+id/progress_view"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                app:circleColor="@color/white"
                app:progress="50"
                app:radius="50dip"
                app:ringBgColor="@color/color_F1F1F1"
                app:ringColor="@color/color_54A158"
                app:strokeWidth="10dip" />
            <TextView
                android:id="@+id/tv_acc_loss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/under_training"
                android:textColor="@color/color_686C7D"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_unbind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@color/color_31708F"
                android:text="@string/unbind_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp">
                <!--  自定义的凹凸布局,预览看不出效果，运行到手机上才能看到效果-->
                <ai.fedml.widget.CouponTextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
                <!-- 个人信息 -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_F5F6FA"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="14dp">

                    <TextView
                        android:id="@+id/tv_account_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_information"
                        android:textColor="@color/color_686C7D"
                        android:textSize="18sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="FedML AI"
                        android:textColor="@color/color_686C7D"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_account_info" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="ch@fedml.ai"
                        android:textColor="@color/color_686C7D"
                        android:textSize="14sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="51dp"
                        android:layout_height="51dp"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_shijiali"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_name" />


                    <ImageView
                        android:id="@+id/img_group"
                        android:layout_width="29dp"
                        android:layout_height="29dp"
                        android:layout_marginTop="18dp"
                        android:src="@mipmap/ic_guide"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

                    <TextView
                        android:id="@+id/tv_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="ch@fedml.ai"
                        android:textColor="@color/color_686C7D"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_group"
                        app:layout_constraintLeft_toRightOf="@+id/img_group"
                        app:layout_constraintTop_toTopOf="@+id/img_group" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- hyper-parameters -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/color_F5F6FA"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="14dp">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hyper_parameters"
                        android:textColor="@color/color_686C7D"
                        android:textSize="18sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_hyper_parameter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:textColor="@color/color_686C7D"
                        android:textSize="14sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView18" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>